--- a/ui/Makefile
+++ b/ui/Makefile
@@ -5,7 +5,7 @@ override CFLAGS += $(JCFLAGS)
 override CXXFLAGS += $(JCXXFLAGS)
 
 FLAGS = -Wall -Wno-strict-aliasing -fno-omit-frame-pointer \
-	-I$(JULIAHOME)/src -I$(JULIAHOME)/src/support -I$(BUILD)$(includedir)
+	-I$(JULIAHOME)/src -I$(JULIAHOME)/src/support -I$(build_includedir)
 
 DEBUGFLAGS += $(FLAGS)
 SHIPFLAGS += $(FLAGS)
@@ -13,7 +13,7 @@ JLDFLAGS += $(LDFLAGS) $(NO_WHOLE_ARCHIVE) $(call exec,$(LLVM_CONFIG) --ldflags)
 
 ifeq ($(USE_SYSTEM_LIBM),0)
 ifneq ($(UNTRUSTED_SYSTEM_LIBM),0)
-JLDFLAGS += $(WHOLE_ARCHIVE) $(BUILD)$(libdir)/libopenlibm.a $(NO_WHOLE_ARCHIVE)
+JLDFLAGS += $(WHOLE_ARCHIVE) $(build_libdir)/libopenlibm.a $(NO_WHOLE_ARCHIVE)
 endif
 endif
 
@@ -29,40 +29,40 @@ release debug:
 	@$(call PRINT_CC, $(CC) $(CPPFLAGS) $(CFLAGS) $(DEBUGFLAGS) -c $< -o $@)
 
 ifeq ($(OS),WINNT)
-$(BUILD)$(bindir)/julia.bat: ${JULIAHOME}/contrib/windows/*.bat
+$(build_bindir)/julia.bat: ${JULIAHOME}/contrib/windows/*.bat
 	cp ${JULIAHOME}/contrib/windows/*.bat ${BUILD}$(bindir)
-julia-release julia-debug: $(BUILD)$(bindir)/julia.bat
+julia-release julia-debug: $(build_bindir)/julia.bat
 julia_res.o: $(JULIAHOME)/contrib/windows/julia.rc
 	JLVER=`cat ${JULIAHOME}/VERSION` && \
 	JLVERi=`echo $$JLVER | perl -nle \
 		'/^(\d+)\.?(\d*)\.?(\d*)/ && \
 		print int $$1,",",int $$2,",0,",int $$3'` && \
 	$(CROSS_COMPILE)windres $< -O coff -o $@ -DJLVER=$$JLVERi -DJLVER_STR=\\\"$$JLVER\\\"
-$(BUILD)$(bindir)/julia-readline$(EXE): julia_res.o
-$(BUILD)$(bindir)/julia-debug-readline$(EXE): julia_res.o
-$(BUILD)$(bindir)/julia-basic$(EXE): julia_res.o
-$(BUILD)$(bindir)/julia-debug-basic$(EXE): julia_res.o
+$(build_bindir)/julia-readline$(EXE): julia_res.o
+$(build_bindir)/julia-debug-readline$(EXE): julia_res.o
+$(build_bindir)/julia-basic$(EXE): julia_res.o
+$(build_bindir)/julia-debug-basic$(EXE): julia_res.o
 JLDFLAGS += julia_res.o
 endif 
 
-julia-basic: $(BUILD)$(bindir)/julia-basic$(EXE)
-julia-debug-basic: $(BUILD)$(bindir)/julia-debug-basic$(EXE)
-julia-readline: $(BUILD)$(bindir)/julia-readline$(EXE)
-julia-debug-readline: $(BUILD)$(bindir)/julia-debug-readline$(EXE)
+julia-basic: $(build_bindir)/julia-basic$(EXE)
+julia-debug-basic: $(build_bindir)/julia-debug-basic$(EXE)
+julia-readline: $(build_bindir)/julia-readline$(EXE)
+julia-debug-readline: $(build_bindir)/julia-debug-readline$(EXE)
 
-$(BUILD)$(bindir)/julia-basic$(EXE): repl.o repl-basic.o
-	@$(call PRINT_LINK, $(CXX) $(LINK_FLAGS) $(SHIPFLAGS) $^ -o $@ -L$(BUILD)$(JL_PRIVATE_LIBDIR) -L$(BUILD)$(libdir) -ljulia $(JLDFLAGS))
-$(BUILD)$(bindir)/julia-debug-basic$(EXE): repl.do repl-basic.do
-	@$(call PRINT_LINK, $(CXX) $(LINK_FLAGS) $(DEBUGFLAGS) $^ -o $@ -L$(BUILD)$(JL_PRIVATE_LIBDIR) -L$(BUILD)$(libdir) -ljulia-debug $(JLDFLAGS))
+$(build_bindir)/julia-basic$(EXE): repl.o repl-basic.o
+	@$(call PRINT_LINK, $(CXX) $(LINK_FLAGS) $(SHIPFLAGS) $^ -o $@ -L$(build_private_libdir) -L$(build_libdir) -ljulia $(JLDFLAGS))
+$(build_bindir)/julia-debug-basic$(EXE): repl.do repl-basic.do
+	@$(call PRINT_LINK, $(CXX) $(LINK_FLAGS) $(DEBUGFLAGS) $^ -o $@ -L$(build_private_libdir) -L$(build_libdir) -ljulia-debug $(JLDFLAGS))
 
-$(BUILD)$(bindir)/julia-readline$(EXE): repl.o repl-readline.o
-	@$(call PRINT_LINK, $(CXX) $(LINK_FLAGS) $(SHIPFLAGS) $^ -o $@ $(READLINE) -L$(BUILD)$(JL_PRIVATE_LIBDIR) -L$(BUILD)$(libdir) -ljulia $(JLDFLAGS)) || (echo "*** Please ensure that the ncurses-devel package is installed on your OS, and try again. ***" && false)
-$(BUILD)$(bindir)/julia-debug-readline$(EXE): repl.do repl-readline.do
-	@$(call PRINT_LINK, $(CXX) $(LINK_FLAGS) $(DEBUGFLAGS) $^ -o $@ $(READLINE) -L$(BUILD)$(JL_PRIVATE_LIBDIR) -L$(BUILD)$(libdir) -ljulia-debug $(JLDFLAGS))
+$(build_bindir)/julia-readline$(EXE): repl.o repl-readline.o
+	@$(call PRINT_LINK, $(CXX) $(LINK_FLAGS) $(SHIPFLAGS) $^ -o $@ $(READLINE) -L$(build_private_libdir) -L$(build_libdir) -ljulia $(JLDFLAGS)) || (echo "*** Please ensure that the ncurses-devel package is installed on your OS, and try again. ***" && false)
+$(build_bindir)/julia-debug-readline$(EXE): repl.do repl-readline.do
+	@$(call PRINT_LINK, $(CXX) $(LINK_FLAGS) $(DEBUGFLAGS) $^ -o $@ $(READLINE) -L$(build_private_libdir) -L$(build_libdir) -ljulia-debug $(JLDFLAGS))
 
 clean: | $(CLEAN_TARGETS)
 	rm -f *.o *.do
-	rm -f $(BUILD)$(bindir)/julia-*-basic $(BUILD)$(bindir)/julia-*-readline $(BUILD)$(bindir)/julia
+	rm -f $(build_bindir)/julia-*-basic $(build_bindir)/julia-*-readline $(build_bindir)/julia
 
 .PHONY: clean release debug julia-release julia-debug
 
